tdf#153721  label change: "Move Chapter..." -> "Move Heading..."
Change-Id: I61fd56566f7a2726492db6fb93699c18dbd2d2ed
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153591
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
(cherry picked from commit fb3dfbd57d91307de383d401c1caf4bb0d9029b9)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153655

--- a/sw/uiconfig/swriter/ui/navigatorpanel.ui
+++ b/sw/uiconfig/swriter/ui/navigatorpanel.ui
@@ -567,7 +567,7 @@
                     <child>
                       <object class="GtkToolButton" id="promote">
                         <property name="visible">True</property>
-                        <property name="tooltip-text" translatable="yes" context="navigatorpanel|promote|tooltip_text">Promote outline level</property>
+                        <property name="tooltip-text" translatable="yes" context="navigatorpanel|promote|tooltip_text">Promote Outline Level</property>
                         <property name="icon-name">sw/res/sc20172.png</property>
                         <child internal-child="accessible">
                           <object class="AtkObject" id="promote-atkobject">
@@ -583,7 +583,7 @@
                     <child>
                       <object class="GtkToolButton" id="demote">
                         <property name="visible">True</property>
-                        <property name="tooltip-text" translatable="yes" context="navigatorpanel|demote|tooltip_text">Demote outline level</property>
+                        <property name="tooltip-text" translatable="yes" context="navigatorpanel|demote|tooltip_text">Demote Outline Level</property>
                         <property name="icon-name">sw/res/sc20173.png</property>
                         <child internal-child="accessible">
                           <object class="AtkObject" id="demote-atkobject">
@@ -599,7 +599,7 @@
                     <child>
                       <object class="GtkToolButton" id="chapterup">
                         <property name="visible">True</property>
-                        <property name="tooltip-text" translatable="yes" context="navigatorpanel|chapterup|tooltip_text">Move chapter up</property>
+                        <property name="tooltip-text" translatable="yes" context="navigatorpanel|chapterup|tooltip_text">Move Heading Up</property>
                         <property name="icon-name">sw/res/sc20174.png</property>
                         <child internal-child="accessible">
                           <object class="AtkObject" id="chapterup-atkobject">
@@ -615,7 +615,7 @@
                     <child>
                       <object class="GtkToolButton" id="chapterdown">
                         <property name="visible">True</property>
-                        <property name="tooltip-text" translatable="yes" context="navigatorpanel|chapterdown|tooltip_text">Move chapter down</property>
+                        <property name="tooltip-text" translatable="yes" context="navigatorpanel|chapterdown|tooltip_text">Move Heading Down</property>
                         <property name="icon-name">sw/res/sc20171.png</property>
                         <child internal-child="accessible">
                           <object class="AtkObject" id="chapterdown-atkobject">
