tdf#141720 sw pagemargincontrol: add more options
There are advanced gutter controls available,
so lets just add more options to this one as well.

It already exists for Page Size and Page Columns.

Change-Id: I5a94044fd18b57962272d8099cf17fdb71e83d1c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153775
Tested-by: Justin Luth <jluth@mail.com>
Reviewed-by: Justin Luth <jluth@mail.com>

--- a/sw/uiconfig/swriter/ui/pagemargincontrol.ui
+++ b/sw/uiconfig/swriter/ui/pagemargincontrol.ui
@@ -469,6 +469,23 @@
             <property name="position">11</property>
           </packing>
         </child>
+        <child>
+          <object class="GtkButton" id="moreoptions">
+            <property name="label" translatable="yes" context="pagemargincontrol|moreoptions">_More Options</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">True</property>
+            <property name="tooltip_text" translatable="yes" context="pagemargincontrol|moreoptions|tooltip_text">More Options</property>
+            <property name="relief">none</property>
+            <property name="use_underline">True</property>
+            <property name="always_show_image">True</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">12</property>
+          </packing>
+        </child>
       </object>
     </child>
   </object>
