Swap .uno:FontColor for .uno:Color
Following tdf#105293, which left some UI elements unchanged.
This also simplifies the sidebar, as .uno:Color is universal
while .uno:FontColor works only with Writer text. It also
benefits tdf#154270, as using the same command in the toolbar
and the sidebar will keep their color in sync.

Change-Id: Ia6e1ffef4012b6f8db4c9079d0b0c99a59887670
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154012
Tested-by: Jenkins
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>

--- a/svx/uiconfig/ui/sidebartextpanel.ui
+++ b/svx/uiconfig/ui/sidebartextpanel.ui
@@ -161,31 +161,7 @@
             <property name="can-focus">False</property>
             <property name="spacing">6</property>
             <child>
-              <object class="GtkToolbar" id="colorbar_writer">
-                <property name="visible">True</property>
-                <property name="can-focus">True</property>
-                <property name="toolbar-style">icons</property>
-                <property name="show-arrow">False</property>
-                <property name="icon_size">2</property>
-                <child>
-                  <object class="GtkMenuToolButton" id=".uno:FontColor">
-                    <property name="visible">True</property>
-                    <property name="use-underline">True</property>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="homogeneous">False</property>
-                  </packing>
-                </child>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkToolbar" id="colorbar_others">
+              <object class="GtkToolbar" id="colorbar">
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="toolbar-style">icons</property>
@@ -205,7 +181,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">1</property>
+                <property name="position">0</property>
               </packing>
             </child>
             <child>
@@ -228,7 +204,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">2</property>
+                <property name="position">1</property>
               </packing>
             </child>
             <child>
@@ -251,7 +227,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">3</property>
+                <property name="position">2</property>
               </packing>
             </child>
           </object>
